<resources>
    <string name="app_name">FindYourself</string>
    <string name="login_screen">Login Screen</string>
    <string name="find_yourself">Find Yourself</string>
    <string name="anonymous_chat_rooms">Anonymous Chat Rooms</string>
    <string name="todo">TODO</string>
    <string name="welcome_to_anonymous_chat_rooms">Welcome to Anonymous Chat Rooms</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="welcome">WELCOME</string>
    <string name="reg_tag">Register to Find More of YourSelf</string>
    <string name="logo">Find Yourself Logo</string>
    <string name="username">Username</string>
    <string name="fullname">Full Name</string>
    <string name="pass">Password</string>
    <string name="conf_pass">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="no_pref">Prefer Not To Say</string>
    <string name="register">Register</string>
    <string name="dob_et">Date of Birth</string>
    <string name="email">Email</string>
    <string name="email_purpose">*Email ID will only be used for authentication and password recovery purposes. Your identity will not be disclosed with this information.</string>
    <string name="already_user">"Already a User? Sign In "</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="chat">CHAT</string>
    <string name="explore">EXPLORE</string>
    <string name="profile">PROFILE</string>
    <string name="delete_acc">DELETE ACCOUNT</string>
    <string name="update_acc">Update Profile</string>
    <string name="all_chats">ALL CHAT ROOMS</string>
    <string name="gender_et">Gender</string>
    <string name="your_chats">Your Chat Rooms</string>
    <string name="logout">Logout</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="log_tag">Login to continue your journey…</string>
    <string name="new_user">New User? SIGN UP</string>
    <string name="login">Login</string>
    <string name="welcome_user">"Hi "</string>
    <string name="about">About Us</string>
    <string name="about_us">Find Yourself application\'s main motto is to help the people suffering from depression or mental health problems. Our users can join various chat groups to discuss their problems to their anonymous friends and can receive suggestions for their better life. Any personal inforamtion of the users are not taken and not disclosed to other users for the safety purposes  </string>
    <string name="tip">Tips</string>
    <string name="tips_info1"> 1.Value yourself</string>
    <string name="tips_info2"> 2.Take care of your body</string>
    <string name="tips_info3"> 3.Surround yourself with peace</string>
    <string name="tips_info4"> 4.Learn how to deal with stress </string>
    <string name="tips_info5"> 5.Quiet your mind</string>
    <string name="tips_info6"> 6. Set realistic goals</string>
    <string name="tips_info7"> 7.Breakup the monotomy</string>
    <string name="tips_info8"> 8.Avoid alcohol and other drugs</string>
    <string name="tips_info9">9. Visit "Find Yourself" when you need it :)</string>


    <string name="tips">Tips</string>
    <string name="create_chat_room">Create Chat Room</string>
</resources>