<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hor_gradient2"
    android:orientation="vertical"
    android:padding="20dp"
    android:textAlignment="center"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@drawable/fy_logo_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/marko_one"
            android:text="@string/tips_info1"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/marko_one"
            android:text="@string/tips_info2"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/marko_one"
            android:text="@string/tips_info3"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/marko_one"
            android:text="@string/tips_info4"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/marko_one"
            android:text="@string/tips_info5"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/marko_one"
            android:text="@string/tips_info6"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/marko_one"
            android:text="@string/tips_info7"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/marko_one"
            android:text="@string/tips_info8"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/marko_one"
            android:text="@string/tips_info9"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="138dp"
            android:fontFamily="@font/marko_one"
            android:text="@string/tip"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
